# tulr

./: .flake8  .gitattributes  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose-run.yaml  docker-compose.yaml  launch.sh  make_build.sh  pyproject.toml  services.yaml  stop.sh  test.sh  turl.yaml  turl_aiven.yaml  turl_avn.yaml
.github/workflows/: codeql-analysis.yml  pre-commit-checks.yml  turl-tests.yaml
secrets/: avnadmin.keystore.p12  avnadmin.truststore.jks  ca.pem  service.cert  service.key  service.pem
services/akhq/: application.yaml  docker-compose.yaml
services/kafka/: docker-compose.yaml
services/postgres/: Dockerfile  docker-compose.yaml  turl.sql
src/: __main__.py
tests/: test_end_to_end.py  test_pg_sink.py  test_turl.py
turl/: __init__.py  __main__.py  aiobase.py  configuration.py  turl.py  turl_record.py
turl/kafka/: __init__.py  kafka_consumer.py  kafka_producer.py
turl/pg/: postgres_sink.py
