[tool.poetry]
name = "tulr"
version = "0.1.0"
description = "Simple url tracker"
authors = ["Pedro Silva <pedro.figs.silva@gmail.com>"]
license = "MIT"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
turl = "src.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
